--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
     "keywords": ["php", "rest", "api", "json", "post", "get"],
     "type": "library",
     "require": {
-        "php": ">=5.5",
-        "ext-curl": "*",
-        "ext-json": "*"
+        "php": ">=5.5.30"
     },
     "autoload": {
         "files": ["src/SimpleRestClient.php"]
