--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "require": {
         "php": ">=5.5.30"
     },
+    "require-dev": {
+        "php": ">=5.5.31"
+    },
     "autoload": {
         "files": ["src/SimpleRestClient.php"]
     }
